--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "iconv-lite": "^0.6.3",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
   },
