--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3.6.5",
     "iconv-lite": "^0.6.3",
     "quasar": "^1.0.0",
+    "v-viewer": "^1.6.4",
     "vue-i18n": "^8.0.0"
   },
   "devDependencies": {
